# arduinoPrepar3D

./: README.md
arduino/rx/: rx.ino
arduino/rx/scheme/: MX-05V Receiver.fzpz  rx.fzz
arduino/tx/: tx.ino
arduino/tx/scheme/: MX-05V Transmitter.fzpz  tx.fzz
windows/: CMakeLists.txt
windows/ThrottleCtrl/: CMakeLists.txt  ThrottleCtrl.cpp
